# Chess

./: CMakeLists.txt
data/: resources.xml
res/: resources.xml
src/: main.cpp
src/interface/: Board.cpp  Board.h  BoardArena.cpp  BoardArena.cpp.autosave  BoardArena.h  BoardArena.h.autosave  Chess.cpp  PieceSprite.cpp  PieceSprite.h  View.cpp  View.h  shared.cpp  shared.h
src/logic/: Board.cpp  Board.h  CellData.cpp  CellData.h  Chesscell.cpp  Chesscell.h  Global.h  Model.cpp  Model.h
